--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "build": "react-router build",
+    "dev": "react-router dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc",
     "studio": "bun drizzle-kit studio",
     "db:push": "bunx drizzle-kit push"
   },
   "dependencies": {
-    "@remix-run/node": "^2.16.5",
-    "@remix-run/react": "^2.16.5",
-    "@remix-run/serve": "^2.16.5",
+    "@react-router/fs-routes": "^7.5.3",
+    "@react-router/node": "^7.0.0",
+    "@react-router/serve": "^7.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
@@ -25,10 +25,12 @@
     "nodemailer": "^6.10.1",
     "pg": "^8.14.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.16.5",
+    "@react-router/dev": "^7.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.13",
